<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_avatar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_add_a_photo_black_24dp"/>

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/signup_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/signup_nickname_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/signup_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/signup_confirm_password"
            android:inputType="textPassword" />
    </LinearLayout>
</ScrollView>