<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.safercript.testhttprequest.fragments.main.AddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_add_a_photo_black_24dp"/>

            <EditText
                android:id="@+id/add_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/description_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/add_text_hashtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/hashtag_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_saveImage"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
